--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,11 @@
-
+/* Tambah di atas index.css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
+}
 /* ini buat teks web ini menceritakan gerak fed in */
 .teks-tengah {
     opacity: 0;
